# core

./: .gitignore  CMakeLists.txt
cmake/: CPM_SQLite3.cmake  CPM_miniz.cmake  CPM_tomlc17.cmake  Compiler.cmake  Dependencies.cmake  Version.cmake  redasmConfig.cmake.in
include/redasm/: allocator.h  common.h  config.h  context.h  function.h  hooks.h  kb.h  listing.h  mapping.h  redasm.h  registers.h  segment.h  symbol.h  theme.h  version.h
include/redasm/graph/: graph.h  layout.h
include/redasm/io/: buffer.h  reader.h
include/redasm/plugins/: analyzer.h  command.h  loader.h  plugin.h
include/redasm/plugins/processor/: instruction.h  processor.h  rdil.h
include/redasm/rdil/: opcodes.h  rdil.h
include/redasm/support/: byteorder.h  lexer.h  logging.h  scratch.h  utils.h
include/redasm/surface/: common.h  graph.h  renderer.h  surface.h
include/redasm/types/: common.h  def.h  type.h
src/: allocator.c  hooks.c  hooks.h  redasm.c  theme.c  theme.h  version.c  version.h
src/core/: autorename.c  autorename.h  context.c  context.h  engine.c  engine.h  function.c  function.h  mapping.c  mapping.h  registers.c  registers.h  segment.c  segment.h  state.c  state.h  stringfinder.c  stringfinder.h  symbol.c  symbol.h  worker.c  worker.h
src/core/db/: db.c  db.h  queries.h  schema.c  types.c  types.h
src/db/: db.c  db.h  queries.c  queries.h  schema.c  schema.h  types.c  types.h
src/graphs/: graph.c  graph.h  layered.c
src/io/: buffer.c  buffer.h  flags.c  flags.h  flagsbuffer.c  flagsbuffer.h  reader.c  reader.h
src/kb/: kb.c  kb.h  object.c  object.h  schema.c  schema.h
src/listing/: builder.c  builder.h  listing.c  listing.h
src/plugins/: analyzer.c  analyzer.h  command.c  common.c  common.h  loader.c  loader.h  module.c  module.h  processor.c  processor.h
src/plugins/builtin/: analyzers.c  analyzers.h  builtin.h  loaders.c  loaders.h  processors.c  processors.h
src/plugins/processor/: instruction.c  processor.c  processor.h
src/project/: load.c  project.h  save.c
src/rdil/: opcodes.c  opcodes.h  rdil.c  rdil.h  renderer.c  renderer.h
src/support/: byteorder.c  containers.c  containers.h  error.c  error.h  hash.c  hash.h  lexer.c  lexer.h  logging.c  logging.h  pattern.c  pattern.h  scratch.c  scratch.h  stringpool.c  stringpool.h  tomlschema.c  tomlschema.h  utils.c  utils.h
src/surface/: graph.c  items.c  items.h  path.c  path.h  renderer.c  renderer.h  row.c  row.h  state.c  state.h  surface.c
src/types/: def.c  def.h  type.c  type.h
